<resources>
    <string name="app_name">App</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_login" translatable="false">Login</string>
    <string name="title_activity_register" translatable="false">RegisterActivity</string>

    <string name="title_activity_profile" translatable="false">ProfileActivity</string>

    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_post" translatable="false">PostActivity</string>

    <string name="title_activity_people" translatable="false">PeopleActivity</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="comment">Comment</string>
    <string name="start">Start</string>
    <string name="posting_as">Posting as</string>
    <string name="new_post">New post</string>
    <string name="s_followers">\'s followers</string>
    <string name="is_following">is following</string>
    <string name="post">Post</string>
    <string name="deleted_post">Deleted post</string>
    <string name="commenting_as">Commenting as</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="delete_post">Do you really want to delete this post?</string>
    <string name="deleted_comment">Deleted comment</string>
    <string name="delete_comment">Do you really want to delete this comment?</string>
    <string name="sent_comment">Sent comment</string>
    <string name="camera_image">Camera image</string>
    <string name="profile">Profile</string>
    <string name="follow">Follow</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="unfollow">Unfollow</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="username">Username</string>
    <string name="not_a_member_register"><u>Not a member? Register!</u></string>
    <string name="already_a_member_sign_in"><u>Already a member? Sign in!</u></string>
    <string name="show_comments">Show comments</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">E-mail address</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-enter password</string>
    <string name="register">Register</string>
    <string name="comments">comments</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="posts">posts</string>
    <string name="latest_post">Latest post</string>
    <string name="edit_profile">Edit profile</string>
    <string name="request_timeout">Request timed out. Try again later.</string>
    <string name="current_password">Current password</string>
    <string name="new_password">New password</string>
    <string name="update_picture">Update picture</string>
    <string name="submit">Submit</string>
    <string name="settings">Settings</string>
    <string name="my_profile">My profile</string>
    <string name="search_user">Search user</string>
    <string name="search">Search</string>
    <string name="nothing_to_display">There is nothing to display\n\nFollow another user and their posts will be displayed here</string>
    <string name="write_something">Write something...</string>

</resources>
