<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/start" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/account"
            android:title="@string/my_profile" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/search"
            android:title="@string/search_user" />
    </group>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/exit"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
